creamos el servlet FormularioOculto, modificamos el servlet FormularioTrabajo añadimos los enlaces necesarios y corregimos errores de los servlet CicloVida, ParametrosIniciales y CabecerasPeticion

--- a/web/HTML/formulario2.html
+++ b/web/HTML/formulario2.html
@@ -58,14 +58,9 @@ and open the template in the editor.
                         
                         <div id="aficiones">
                         <label>Aficiones(uno o varios,CTRL)</label> </br>
-                        <select name="Aficiones" size="6" multiple>
-                            <option value="Deporte">Deporte</option>
-                            <option value="Musica">Musica</option>
-                            <option value="Informatica">Informatica</option>
-                            <option value="Viajes">Viajes</option>
-                            <option value="Tiendas">Tiendas</option>
-                            <option value="Juegos">Juegos</option>
-                        </select>
+                            <input type="checkbox" name="Prefe1" value="Deporte"> Deporte<br>
+                            <input type="checkbox" name="Prefe2" value="Lectura"> Lectura <br>
+                            <input type="checkbox" name="Prefe3" value="Cine"> Cine <br>
                         </div> <br/>
                         
                         <div id="comentarios">
