--- a/web/HTML/formularioTrabajo.html
+++ b/web/HTML/formularioTrabajo.html
@@ -6,9 +6,10 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Formulario Trabajo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <Link rel="stylesheet" href="../CSS/cssFormulario.css"/>
     </head>
 <body>
         <div id="contenedor">
@@ -181,9 +182,9 @@ and open the template in the editor.
                         
                         <div id="preferencias">
                             <label>Preferencias:</label></br>
-                            <input type="checkbox" name="Deporte" value="Deporte"> Deporte<br>
-                            <input type="checkbox" name="Lectura" value="Lectura"> Lectura <br>
-                            <input type="checkbox" name="Cine" value="Cine"> Cine <br>
+                            <input type="checkbox" name="Prefe1" value="Deporte"> Deporte<br>
+                            <input type="checkbox" name="Prefe2" value="Lectura"> Lectura <br>
+                            <input type="checkbox" name="Prefe3" value="Cine"> Cine <br>
                         </div>
                         </br>
                         
