--- a/web/index.html
+++ b/web/index.html
@@ -21,10 +21,12 @@ and open the template in the editor.
                 <ul>
                     <li><a href="Saludo">Saludo</a></li>
                     <li><a href="SaludoAnotacion">Saludo con anotaciones</a></li>
-                    <li><a href="CicloVida?p1=10&p2=hola">Ciclo de vida</a></li>
+                    <li><a href="CicloVida">Ciclo de vida</a></li>
                     <li><a href="CabecerasPeticion">Cabeceras de peticion</a></li>  
+                    <li><a href="ParametrosIniciales?p1=10&p2=hola">Parametros iniciales</a></li> 
                     <li><a href="HTML/formulario1.html">Primer formulario</a></li>
                     <li><a href="HTML/formulario2.html">Segundo formulario</a></li>
+                    <li><a href="FormularioOculto">Formulario oculto</a></li>
                     <li><a href="HTML/formularioTrabajo.html">Formulario Trabajo</a></li>
                 </ul>
             </div>
