añadidas JSPs SaludoJSP y Calculadora  y los servlets de contadores de visitas con Cookies y sesiones.

--- a/web/HTML/formularioTrabajo.html
+++ b/web/HTML/formularioTrabajo.html
@@ -185,6 +185,7 @@ and open the template in the editor.
                             <input type="checkbox" name="Prefe1" value="Deporte"> Deporte<br>
                             <input type="checkbox" name="Prefe2" value="Lectura"> Lectura <br>
                             <input type="checkbox" name="Prefe3" value="Cine"> Cine <br>
+                            <input type="checkbox" name="Prefe4" value="Juegos"> Juegos <br>
                         </div>
                         </br>
                         
