--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,8 @@ and open the template in the editor.
                     <li><a href="HTML/formulario2.html">Segundo formulario</a></li>
                     <li><a href="FormularioOculto">Formulario oculto</a></li>
                     <li><a href="HTML/formularioTrabajo.html">Formulario Trabajo</a></li>
+                    <li><a href="ContadorVisitasCookies">Contador de visitas (con cookies)</a></li>
+                    <li><a href="ContadorVisitasSesiones">Contador de visitas (con sesiones)</a></li>
                 </ul>
             </div>
             
