creamos el formulario con beans, la cesta de la compra con JSPs añadimos los enlaces necesarios y añadimos comentarios en los ficheros

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@ and open the template in the editor.
                     <li><a href="HTML/formularioTrabajo.html">Formulario Trabajo</a></li>
                     <li><a href="ContadorVisitasCookies">Contador de visitas (con cookies)</a></li>
                     <li><a href="ContadorVisitasSesiones">Contador de visitas (con sesiones)</a></li>
+                    <li><a href="FormularioConBeans">Formulario de 3 users (con beans)</a></li>
                 </ul>
             </div>
             
@@ -38,6 +39,7 @@ and open the template in the editor.
                 <ul>
                     <li><a href="HTML/saludoJSP.html">Saludo con JSP</a></li>
                     <li><a href="JSP/Calculadora.jsp">Calculadora con JSP</a></li>
+                    <li><a href="HTML/indexCestaCompra.html">Cesta de la compra</a></li>
                 </ul>
             </div>
             
